# CUDA-NN

./: .gitignore  README.md  beat.py  beat_grads.py  compile.sh  config.yaml  config_pointnet.yaml  merge.sh  requirements.txt
CUDA-NN/: CMakeLists.txt  Makefile  main
CUDA-NN/docs/: layer_impl.md  model_struc.md  tensor_impl.md
CUDA-NN/include/: configure.cuh  kernels.cuh  layers.cuh  logging.cuh  loss.cuh  models.cuh  optimizer.cuh  tensor.cuh  utils.cuh
CUDA-NN/src/: CMakeLists.txt  main.cu  test.cu  train.cu
CUDA-NN/src/common/: CMakeLists.txt  configure.cu  logging.cu  utils.cu  utils.cuh
CUDA-NN/src/datasets/: CMakeLists.txt  dataloader.cu  dataloader.cuh
CUDA-NN/src/layers/: CMakeLists.txt  Linear.cu  base.cu  base.cuh  bn1d.cu  bn1d.cuh  conv1d.cu  conv1d.cuh  dropout.cu  dropout.cuh  layer.cu  layer.cuh  linear.cu  linear.cuh  module.cu  module.cuh  relu.cu  relu.cuh  softmax.cu  softmax.cuh
CUDA-NN/src/loss/: CMakeLists.txt  base_loss.cuh  cross_entropy.cu  cross_entropy.cuh  negative_likelihood.cu  negative_likelihood.cuh
CUDA-NN/src/models/: CMakeLists.txt  base.cu  base.cuh  encoder.cu  encoder.cuh  module.cu  module.cuh  pointnet.cu  pointnet.cuh  stn3d.cu  stn3d.cuh  stnkd.cu  stnkd.cuh
CUDA-NN/src/optimizer/: CMakeLists.txt  adam.cu  adam.cuh  base_opt.cuh  sgd.cu  sgd.cuh
CUDA-NN/src/tensor/: CMakeLists.txt  tensor.cu  tensor.cuh
CUDA-NN/src/tensor/kernels/: CMakeLists.txt  arith_kernels.cu  backprop.cu  kernels.cu  kernels.cuh  l1_kernels.cu  l2_kernels.cu  l3_kernels.cu  matmul_kernels.cu  unary_kernels.cu
CUDA-NN/tests/: mk.sh  test  test-add.cu  test-bmm.cu  test-bn1d.cu  test-conv1d.cu  test-linear.cu  test-max.cu  test-mul.cu  test-stnkd.cu
base/: query.cu
base/Matmul/: configure.cuh  cublas.cu  host.cu  kernels.cu  kernels.cuh  matmul.md  test.cu  timer.cu  v0.cu  v1.cu  v2.cu  v3.cu
base/Reduce/: kernels.cu  kernels.cuh  timer.cu
base/Transpose/: a.out  kernels.cu  kernels.cuh  timer.cu
cuda/: common.cuh
cuda/Matmul/: Matmul_naive.cu  Matmul_op1.cu  kernels.cu  kernels.cuh  timer  timer.cu
cuda/PointNet/: inference.cu
cuda/Reduce/: timer  timer.cu
data/: bn1.weight.txt  feat.stn.fc3.bias.txt  feat.stn.fc3.weight.txt
docs/: backprop.md  model_struc.md
python/: dataset.py  inference.py  model.py  plot_point_cloud.py  requirement.txt  test.py  train.py
utils/: analysis_beat.py  analysis_data.py  compare.py  stat_len.py
